[package]
authors = ["Inky <47245667+Inky-developer@users.noreply.github.com>"]
default-run = "debris-lang"
edition = "2021"
name = "debris-lang"
version = "0.1.0"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "debris-lang"
path = "src/main.rs"

[lib]
name = "debris_lang"
path = "src/lib.rs"
doc = false

[features]
default = ["colored_errors"]
colored_errors = ["debris-error/colored_errors"]
test_vanilla_server = []
interpret = ["datapack_vm"]

[dependencies]
debris-backends = { path = "backends" }
debris-common = { path = "common" }
debris-error = { path = "error" }
debris-hir = { path = "hir" }
debris-mir = { path = "mir" }
debris-llir = { path = "llir" }
debris-std = { path = "std" }
datapack_common = { git = "https://github.com/SuperTails/datapack_common.git" }
datapack_vm = { git = "https://github.com/Inky-developer/datapackvm.git", optional=true }


[dev-dependencies]
mc_utils = { git = "https://github.com/Inky-developer/mc_utils" }
criterion = "0.3"
datapack_vm = { git = "https://github.com/Inky-developer/datapackvm.git" }

[[bench]]
name = "debris"
harness = false
