[package]
authors = ["Inky <47245667+Inky-developer@users.noreply.github.com>"]
edition = "2018"
name = "debris-backends"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1"
debris-core = {path = "../core"}
vfs = {path = "../vfs"}

[dev-dependencies]
tempfile = "3.2"
