[package]
authors = ["Inky <47245667+Inky-developer@users.noreply.github.com>"]
edition = "2021"
name = "debris-backends"
version = "0.1.0"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datapack_common = { git = "https://github.com/SuperTails/datapack_common.git" }
debris-common = { path = "../common" }
debris-llir = { path = "../llir" }
rustc-hash = "1.1"
indexmap = "1.7"
itertools = "0.10"

[dev-dependencies]
tempfile = "3.2"
