[package]
authors = ["Inky <47245667+Inky-developer@users.noreply.github.com>"]
edition = "2021"
name = "debris-common"
version = "0.1.0"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1"
smol_str = "0.1"
indexmap = "1.8"
