[package]
authors = ["Inky <47245667+Inky-developer@users.noreply.github.com>"]
edition = "2018"
name = "debris-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = {version = "0.9.0", features = ["color"]}
debris-common = {path = "../common"}
debris-derive = {path = "../derive"}
generational-arena = "0.2"
lazy_static = "1.4"
pest = "2.1"
pest_derive = "2.1"
rustc-hash = "1.1"
salsa = "0.16"
thiserror = "1.0"
