[package]
authors = ["Inky <47245667+Inky-developer@users.noreply.github.com>"]
edition = "2018"
name = "debris-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = {version = "0.9.0", features = ["color"]}
debris-common = {path = "../common"}
debris-derive = {path = "../derive"}
indexmap = "1.6"
itertools = "0.10"
lazy_static = "1.4"
once_cell = "1.7"
pest = "2.1"
pest_derive = "2.1"
rustc-hash = "1.1"
thiserror = "1.0"

[features]
default = []
colored_errors = []