[package]
authors = ["Inky <47245667+Inky-developer@users.noreply.github.com>"]
edition = "2018"
name = "debris-derive"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
debris-common = {path = "../common"}
debris-core = {path = "../core"}
debris-type = {path = "../type"}
trybuild = {version = "1.0", features = ["diff"]}
