[package]
name = "debris-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debris-common = {"path"="../common"}

annotate-snippets = {version = "0.9.0", features = ["color"]}
itertools = "0.10"
thiserror = "1.0"

[features]
default = []
colored_errors = []