[package]
name = "debris-hir"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debris-common = {path="../common"}
debris-error = {path="../error"}
pest = "2.1"
pest_derive = "2.1"
indexmap = "1.7"
itertools = "0.10"
lazy_static = "1.4"