[package]
name = "debris-hir"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debris-common = { path = "../common" }
debris-error = { path = "../error" }
debris-parser = { path = "../parser" }
indexmap = "1.8"
itertools = "0.10"
