[package]
name = "debris-llir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debris-common = { path = "../common" }
debris-error = { path = "../error" }
debris-mir = { path = "../mir" }
debris-derive = { path = "../derive" }
indexmap = "1.7"
itertools = "0.10"
once_cell = "1.8"
rustc-hash = "1.1"