[package]
name = "debris-llir"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debris-common = { path = "../common" }
debris-error = { path = "../error" }
debris-mir = { path = "../mir" }
indexmap = "2.1"
itertools = "0.12"
rustc-hash = "1.1"
elsa = "1.9"

[features]
default = []
log_optimizer = []