[package]
name = "debris-mir"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debris-common = { path = "../common" }
debris-error = { path = "../error" }
debris-hir = { path = "../hir" }
itertools = "0.12"
rustc-hash = "1.1"
