[package]
authors = ["Inky <47245667+Inky-developer@users.noreply.github.com>"]
edition = "2018"
name = "testing"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc_utils = {git = "https://github.com/Inky-developer/mc_utils"}
